Set theme jekyll-theme-leap-day

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ github_username:  linjonh
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-minimal
+theme: jekyll-theme-leap-day
 plugins:
   - jekyll-feed
 
