--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Android 博客
 email: jaysen.lin@forxmail.com
 description: >- # this means to ignore newlines until "baseurl:"
     Android 开发博客，各种实用知识
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/TechBlog" # the subpath of your site, e.g. /blog
 url: "https://linjonh.github.io" # the base hostname & protocol for your site
 twitter_username: linjonh
 github_username:  linjonh
