--- a/_config.yml
+++ b/_config.yml
@@ -47,8 +47,8 @@ disqus_shortname:  https-linjonh-github-io-techblog #gaohaoyang
 # 百度统计 id，将统计代码替换为自己的百度统计id，即
 # hm.src = "//hm.baidu.com/hm.js?xxxxxxxxxxxx";
 # xxxxx字符串
-baidu_tongji_id:
-google_analytics_id:  # google 分析追踪id
+baidu_tongji_id: b4b97907d1054f3dd41e607361c91895
+google_analytics_id: UA-56775175-4 # google 分析追踪id
 
 
 # Build settings
