1.修改标题简介。2、修改about内容3、修改主题配色 4、新增文章 5、新增百度分享代码

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ url: "https://linjonh.github.io" # the base hostname & protocol for your site
 twitter_username: linjonh
 github_username:  linjonh
 user_name: Jaysen
-brief-intro: Front-end Dev Engineer & Android Developer
+brief-intro: DevEngineer
 permalink: /:year/:month/:day/:title/
 
 # other links
