--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: jaysen.lin@forxmail.com
 description: >- # this means to ignore newlines until "baseurl:"
     Developer技术博客，各种实用知识
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://jaylin.top" # the base hostname & protocol for your site
+url: "https://linjonh.github.io/TechBlog/" # the base hostname & protocol for your site
 twitter_username: linjonh
 github_username:  linjonh
 user_name: 林建有
