--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: Developer技术博客
 email: jaysen.lin@forxmail.com
 description: >- # this means to ignore newlines until "baseurl:"
     Developer技术博客，各种实用知识
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://linjonh.github.io/TechBlog" # the base hostname & protocol for your site
+baseurl: "/TechBlog" # the subpath of your site, e.g. /blog
+url: "https://linjonh.github.io" # the base hostname & protocol for your site
 twitter_username: linjonh
 github_username:  linjonh
 user_name: 林建有
