--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ url: "https://linjonh.github.io" # the base hostname & protocol for your site
 twitter_username: linjonh
 github_username:  linjonh
 user_name: 林建有
-brief-intro: DevEngineer
+brief-intro: DevEngineer:林建有
 permalink: /:year/:month/:day/:title/
 
 # other links
