--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ tagline: A text-focused Jekyll theme # it will display as the subtitle
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
+baseurl: "/TechBlog" # the subpath of your site, e.g. /blog
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: "https://linjonh.github.io/TechBlog/"
