--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # used by seo meta and the atom feed
 baseurl: "/TechBlog" # the subpath of your site, e.g. /blog
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://linjonh.github.io/TechBlog/"
+url: "https://linjonh.github.io"
 
 github:
   username: github_username # change to your GitHub username
