--- a/_config.yml
+++ b/_config.yml
@@ -182,7 +182,7 @@ defaults:
       toc: true # Display TOC column in posts.
       # DO NOT modify the following parameter unless you are confident enough
       # to update the code of all other post links in this project.
-      permalink: /posts/:title/
+      permalink: /TechBlog/posts/:title/
   - scope:
       path: _drafts
     values:
@@ -192,7 +192,7 @@ defaults:
       type: tabs # see `site.collections`
     values:
       layout: page
-      permalink: /:title/
+      permalink: /TechBlog/:title/
 
 sass:
   style: compressed
@@ -223,5 +223,5 @@ jekyll-archives:
     category: category
     tag: tag
   permalinks:
-    tag: /tags/:name/
-    category: /categories/:name/
+    tag: /TechBlog/tags/:name/
+    category: /TechBlog/categories/:name/
