--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,9 @@ tagline: A text-focused Jekyll theme # it will display as the subtitle
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
-base_url: "./TechBlog" # the subpath of your site, e.g. /blog
+# The base URL of your site
+baseurl: "/TechBlog"
+base_url: "" # the subpath of your site, e.g. /blog
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: "https://linjonh.github.io"
@@ -150,8 +152,6 @@ pwa:
 
 paginate: 10
 
-# The base URL of your site
-baseurl: ""
 
 # ------------ The following options are not recommended to be modified ------------------
 
