增加giscus评论功能

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,5 +29,8 @@
   },
   "[liquid]": {
     "editor.defaultFormatter": "sissel.shopify-liquid"
+  },
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
 }
