--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: 林建有个人博客 # the main title
 tagline: 开发者，深耕于Android客户开发，多媒体应用，网页，python等 # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  林建有个人博客，开发者，深耕于Android客户开发，多媒体应用，网页，python，js，java，html技术
 
 # The base URL of your site
 baseurl: "/TechBlog"
@@ -112,7 +112,7 @@ toc: true
 
 comments:
   # Global switch for the post-comment system. Keeping it empty means disabled.
-  provider: # [disqus | utterances | giscus]
+  provider: giscus # [disqus | utterances | giscus]
   # The provider options are as follows:
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -121,16 +121,32 @@ comments:
     repo: # <gh-username>/<repo>
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
+  #   <script src="https://giscus.app/client.js"
+  #         data-repo="linjonh/blog_comment_repo"
+  #         data-repo-id="R_kgDON5YUqQ"
+  #         data-category="Announcements"
+  #         data-category-id="DIC_kwDON5YUqc4Cm9Ln"
+  #         data-mapping="title"
+  #         data-strict="1"
+  #         data-reactions-enabled="1"
+  #         data-emit-metadata="0"
+  #         data-input-position="top"
+  #         data-theme="preferred_color_scheme"
+  #         data-lang="zh-CN"
+  #         data-loading="lazy"
+  #         crossorigin="anonymous"
+  #         async>
+  # </script>
   giscus:
-    repo: # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
-    mapping: # optional, default to 'pathname'
-    strict: # optional, default to '0'
-    input_position: # optional, default to 'bottom'
-    lang: # optional, default to the value of `site.lang`
-    reactions_enabled: # optional, default to the value of `1`
+    repo: "linjonh/blog_comment_repo" # <gh-username>/<repo>
+    repo_id: "R_kgDON5YUqQ"
+    category: "Announcements"
+    category_id: "DIC_kwDON5YUqc4Cm9Ln"
+    mapping: "title" # optional, default to 'pathname'
+    strict: "1" # optional, default to '0'
+    input_position: "top" # optional, default to 'bottom'
+    lang: "zh-CN" # optional, default to the value of `site.lang`
+    reactions_enabled: "1" # optional, default to the value of `1`
 
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
@@ -151,7 +167,6 @@ pwa:
       # - "/example"  # URLs match `<SITE_URL>/example/*` will not be cached by the PWA
 
 paginate: 10
-
 
 # ------------ The following options are not recommended to be modified ------------------
 
