--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "dplayer": "^1.27.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
