--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -45,7 +45,7 @@ jobs:
           bundler-cache: true
 
       - name: Build site
-        run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }} --trace"
+        run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}" --trace
         env:
           JEKYLL_ENV: "production"
 
