--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - chirpy_theme
     paths-ignore:
+      - .github/workflows/pages-deploy.yml
       - .gitignore
       - README.md
       - LICENSE
@@ -45,7 +46,7 @@ jobs:
           bundler-cache: true
 
       - name: Build site
-        run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}" --trace
+        run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}" --trace --profile
         env:
           JEKYLL_ENV: "production"
 
