--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -1,13 +1,13 @@
 name: "Build and Deploy"
 on:
-  push:
-    branches:
-      - chirpy_theme
-    paths-ignore:
-      - .github/workflows/pages-deploy.yml
-      - .gitignore
-      - README.md
-      - LICENSE
+  # push:
+  #   branches:
+  #     - chirpy_theme
+  #   paths-ignore:
+  #     - .github/workflows/pages-deploy.yml
+  #     - .gitignore
+  #     - README.md
+  #     - LICENSE
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
