Update linux_nc04.yml [self-hosted,X64,Linux]

--- a/.github/workflows/linux_nc04.yml
+++ b/.github/workflows/linux_nc04.yml
@@ -24,7 +24,7 @@ concurrency:
 
 jobs:
   build:
-    runs-on: zp-nc04
+    runs-on: [self-hosted,X64,Linux]
 
     steps:
       - name: Checkout
@@ -65,7 +65,7 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: zp-nc04
+    runs-on: [self-hosted,X64,Linux]
     needs: build
     steps:
       - name: Deploy to GitHub Pages
