--- a/.github/workflows/linux_nc04.yml
+++ b/.github/workflows/linux_nc04.yml
@@ -37,18 +37,21 @@ jobs:
 
       - name: Setup Pages
         id: pages
-        uses: actions/configure-pages@v4
+        uses: actions/configure-pages@v4        
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.3
           bundler-cache: true
-
-      - name: Build site
-        run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}" --trace --profile
-        env:
-          JEKYLL_ENV: "production"
+      
+      - name: Display Build outputs.base_path
+        run: echo path "_site${{ steps.pages.outputs.base_path }}"
+        
+      # - name: Build site        
+      #   run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}" --trace --profile
+      #   env:
+      #     JEKYLL_ENV: "production"
 
       # - name: Test site
       #   run: |
@@ -68,6 +71,8 @@ jobs:
     runs-on: [self-hosted,X64,Linux]
     needs: build
     steps:
+      - name: Display deployed URL
+        run: echo "Deployed to ${{ steps.deployment.outputs.page_url }}"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
