--- a/hugo.toml
+++ b/hugo.toml
@@ -127,6 +127,10 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
     email = ""
     link = ""
 
+  [params.pwa]
+    enabled=true
+    cache = { enabled = true, deny_paths = ["/admin", "/private"] }
+
   # Header config
   # 页面头部导航栏配置
   [params.header]
