--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/loveIt"]
 	path = themes/loveIt
-	url = https://github.com/dillonzq/LoveIt.git
+	url = git@github.com:linjonh/hugo-theme-loveIt.git
