--- a/.github/workflows/hugo-github-linux-build-deploy.yml
+++ b/.github/workflows/hugo-github-linux-build-deploy.yml
@@ -1,13 +1,13 @@
-name: "Build and Deploy"
+name: "hugo-github-linux-build-deploy"
 on:
-  # push:
-  #   branches:
-  #     - chirpy_theme
-  #   paths-ignore:
-  #     - .github/workflows/pages-deploy.yml
-  #     - .gitignore
-  #     - README.md
-  #     - LICENSE
+  push:
+    branches:
+      - hugo-blog
+    paths-ignore:
+      - .github/workflows/pages-deploy.yml
+      - .gitignore
+      - README.md
+      - LICENSE
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -23,7 +23,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build:
+  build-hugo-blog:
     runs-on: ubunteu-latest
 
     steps:
@@ -31,42 +31,43 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          # submodules: true
+          submodules: true
           # If using the 'assets' git submodule from Chirpy Starter, uncomment above
           # (See: https://github.com/cotes2020/chirpy-starter/tree/main/assets)
-
+      - name: Cache Hugo Resources
+        uses: actions/cache@v3
+        with:
+          path: |
+            resources
+            public
+          key: ${{ runner.os }}-hugo-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-hugo-
+              
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v4
+      
+      - name: install hugo
+        run: curl https://github.com/gohugoio/hugo/releases/download/v0.145.0/hugo_extended_0.145.0_linux-amd64.deb && sudo apt install ./hugo_extended_0.145.0_linux-amd64.deb
 
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 3.3
-          bundler-cache: true
+      - name: show veresion
+        run: hugo version
 
       - name: Build site
-        run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}" --trace --profile
-        env:
-          JEKYLL_ENV: "production"
-
-      # - name: Test site
-      #   run: |
-      #     bundle exec htmlproofer _site \
-      #       \-\-disable-external \
-      #       \-\-ignore-urls "/^http:\/\/127.0.0.1/,/^http:\/\/0.0.0.0/,/^http:\/\/localhost/"
+        run: pwd && HUGO_ENVIRONMENT=production hugo --noChmod --noTimes --ignoreCache --gc --minify &
 
       - name: Upload site artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: "_site${{ steps.pages.outputs.base_path }}"
+          path: public
 
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
+    runs-on: ubunteu-latest
+    needs: build-hugo-blog
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
