--- a/.github/workflows/hugo-github-linux-build-deploy.yml
+++ b/.github/workflows/hugo-github-linux-build-deploy.yml
@@ -24,7 +24,7 @@ concurrency:
 
 jobs:
   build-hugo-blog:
-    runs-on: ubunteu-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
@@ -66,7 +66,7 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubunteu-latest
+    runs-on: ubuntu-latest
     needs: build-hugo-blog
     steps:
       - name: Deploy to GitHub Pages
