处理非法html tag的编译错误

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "hugo build",
-    "build:js": "rollup --config"
+    "build:js": "rollup --config",
+    "test": "rm -rf public && hugo server --gc --minify"
+
   },
   "repository": {
     "type": "git",
