--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "hugo build",
     "build:js": "rollup --config",
-    "pro": "HUGO_ENVIRONMENT=production hugo server",
+    "pro": "rm -rf public && HUGO_ENVIRONMENT=production hugo server",
     "test": "rm -rf public && hugo server  #--gc --minify",
     "upload": "node ./upload_index_json.js"
   },
