--- a/.github/workflows/hugo-github-linux-build-deploy.yml
+++ b/.github/workflows/hugo-github-linux-build-deploy.yml
@@ -25,7 +25,8 @@ concurrency:
 jobs:
   build-hugo-blog:
     runs-on: ubuntu-latest
-
+    environment:
+          name: github-pages
     steps:
       - name: Checkout
         uses: actions/checkout@v4
